tests/negative/semantic/index_expression_type_mismatch/input.ci
void main() {
    int[] xs = [1];
    print(toString(xs["a"]));
}
